# SQLAdvisor

./: .gitignore
sqladvisor/: CMakeLists.txt
